# coq-semsearch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
semsearch/: annotate.py  config.py  embed.py  extract.py  models.py  search.py  server.py
semsearch/static/: index.html
tests/: test_search_quality.py
